@startuml

skinparam classFontColor automatic
skinparam classHeaderBackgroundColor<<Important>> #EA3652
hide stereotype

package Domain <<Rectangle>> {

    interface Instruction <<Important>> {
        + void execute(Player player, MoveState moveState, Stock stock) 
        + String getName()
    }

    class Action {
        - List<Instruction> instructions

        + Action(Instructions... instructions)
        + List<Instruction> getInstructions()
    }

    class ActionCard {
        - Action action

        + ActionCard(..., Action action)
        + Action getAction()
    }

}

package Application <<Rectangle>> {

    class PlayerMove {
            + void doActionPhase()
    }

    package "Many different Instructions" <<Cloud>> {
    }

    ' together {

    '     class DiscardAndDrawCardsInstruction {
    '     }

    '     class DisposeMoneyCardTakeMoneyCardToHandInstruction {
    '     }

    '     class DrawCardsInstruction {
    '     }

    '     class EarnActionsInstruction {
    '     }

    '     class EarnBuyingsInstruction {
    '     }

    '     class EarnMoneyInstruction {
    '     }

    ' }

}

Action "1" o-- "n" Instruction
ActionCard "1" o-r- "1" Action

PlayerMove ..> ActionCard

"Many different Instructions" ..|> Instruction
' DiscardAndDrawCardsInstruction --|> Instruction
' DisposeMoneyCardTakeMoneyCardToHandInstruction --|> Instruction
' DrawCardsInstruction --|> Instruction
' EarnActionsInstruction --|> Instruction
' EarnBuyingsInstruction --|> Instruction
' EarnMoneyInstruction --|> Instruction

@enduml